# STELLA

./: README.md
PoCs/ECALL_out_leak/: Makefile
PoCs/ECALL_out_leak/App/: App.cpp
PoCs/ECALL_out_leak/Enclave/: Enclave.cpp  Enclave.edl
PoCs/ECALL_user_check_leak/: README.md
PoCs/ECALL_user_check_leak/App/: App.cpp
PoCs/ECALL_user_check_leak/Enclave/: Enclave.cpp  Enclave.edl
PoCs/Null_pointer_leak/: Makefile  README.md  printLowestMapableAddress.c
PoCs/Null_pointer_leak/App/: App.cpp  App.h
PoCs/Null_pointer_leak/Enclave/: Enclave.cpp  Enclave.edl
PoCs/OCALL_in_leak/: README.md
PoCs/OCALL_in_leak/App/: App.cpp
PoCs/OCALL_in_leak/Enclave/: Enclave.cpp  Enclave.edl
PoCs/OCALL_return_leak/: Makefile  README.md
PoCs/OCALL_return_leak/App/: App.cpp
PoCs/OCALL_return_leak/Enclave/: Enclave.cpp  Enclave.edl  Enclave.h
scripts/PoCs/: run.sh
src/: CMakeLists.txt  ELA.cpp  parseEDL.py
src/core_src/analyzer/: keywords.txt  test.cpp
src/core_src/analyzer/headers/: LeakParams.h  test.h
src/core_src/edl_extractor/: CodeGen.ml  Extractor.ml  Makefile  Util.ml
src/headers/: LeakParamItem.h  ela.h
src/svf_src/include/CUDD/: cudd.h  cuddInt.h  epd.h  mtr.h  st.h  util.h
src/svf_src/include/Graphs/: SVFGOPT.h  VFG.h
src/svf_src/lib/DDA/: DDAClient.cpp
src/svf_src/lib/SABER/: LeakChecker.cpp
testcase/prod/: BiORAM-SGX-dataowner_data.ll  mbedtls_SGX.ll  password-manager.ll
testcase/prod/config/: BiORAM-SGX.config  Fidelius.config  PrivacyGuard.config  SGX-Tor.config  SGX_SQLite.config  TACIoT.config  TaLoS.config  Town-Crier.config  (+6 more)
(+7 files in other folders)
